org/force-app/main/default/objects/Lead/fields/AddressComplement__c.field-meta.xml
<CustomField>
    <fullName>AddressComplement__c</fullName>
    <label>Complemento endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>