org/force-app/main/default/objects/Lead/fields/AddressNumber__c.field-meta.xml
<CustomField>
    <fullName>AddressNumber__c</fullName>
    <label>Número endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>