org/force-app/main/default/objects/Lead/fields/BaseClient__c.field-meta.xml
<CustomField>
    <fullName>BaseClient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente base?</label>
    <type>Checkbox</type>
</CustomField>