org/force-app/main/default/objects/Lead/fields/BillingType__c.field-meta.xml
<CustomField>
    <fullName>BillingType__c</fullName>
    <label>Forma de Cobrança</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boleto</fullName>
                <default>true</default>
                <label>Boleto</label>
            </value>
            <value>
                <fullName>Cartão</fullName>
            </value>
            <value>
                <fullName>Depósito</fullName>
            </value>
            <value>
                <fullName>PIX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>