org/force-app/main/default/objects/Lead/fields/ClientType__c.field-meta.xml
<CustomField>
    <fullName>ClientType__c</fullName>
    <label>Porte empresa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>