org/force-app/main/default/objects/Lead/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <formula>TEXT(CreatedBy.Cluster__c)</formula>
    <label>Time/Cluster</label>
    <type>Text</type>
</CustomField>