org/force-app/main/default/objects/Lead/fields/CNAE__c.field-meta.xml
<CustomField>
    <fullName>CNAE__c</fullName>
    <label>CNAE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>