org/force-app/main/default/objects/Lead/fields/contactType__c.field-meta.xml
<CustomField>
    <fullName>contactType__c</fullName>
    <label>Tipo de contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Receptivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>