org/force-app/main/default/objects/Lead/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>Validade da proposta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
                <default>true</default>
                <label>30</label>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>