org/force-app/main/default/objects/Lead/fields/HasBillingType__c.field-meta.xml
<CustomField>
    <fullName>HasBillingType__c</fullName>
    <formula>NOT(ISPICKVAL(BillingType__c,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Billing Type</label>
    <type>Checkbox</type>
</CustomField>