org/force-app/main/default/objects/Lead/fields/HasDueDate__c.field-meta.xml
<CustomField>
    <fullName>HasDueDate__c</fullName>
    <formula>NOT(ISPICKVAL(DueDate__c, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Due Date</label>
    <type>Checkbox</type>
</CustomField>