org/force-app/main/default/objects/Lead/fields/HasInterest__c.field-meta.xml
<CustomField>
    <fullName>HasInterest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasInterest</label>
    <type>Checkbox</type>
</CustomField>