org/force-app/main/default/objects/Lead/fields/InscricaoMunicipal__c.field-meta.xml
<CustomField>
    <fullName>InscricaoMunicipal__c</fullName>
    <label>Inscrição Municipal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>