org/force-app/main/default/objects/Lead/fields/IntegrationAttempts__c.field-meta.xml
<CustomField>
    <fullName>IntegrationAttempts__c</fullName>
    <label>Tentativas de integração</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>