org/force-app/main/default/objects/Lead/fields/IntegrationError__c.field-meta.xml
<CustomField>
    <fullName>IntegrationError__c</fullName>
    <label>Erro da integraçao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>