org/force-app/main/default/objects/Lead/fields/IntegrationReturnCode__c.field-meta.xml
<CustomField>
    <fullName>IntegrationReturnCode__c</fullName>
    <label>Retorno integração (código)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>