org/force-app/main/default/objects/Lead/fields/IntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>IntegrationStatus__c</fullName>
    <label>Status da integraçao</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sucesso</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>