org/force-app/main/default/objects/Lead/fields/IsInternational__c.field-meta.xml
<CustomField>
    <fullName>IsInternational__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internacional?</label>
    <type>Checkbox</type>
</CustomField>