org/force-app/main/default/objects/Lead/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <formula>TEXT(Latitude)</formula>
    <label>Latitude</label>
    <type>Text</type>
</CustomField>