org/force-app/main/default/objects/Lead/fields/LeadConverted__c.field-meta.xml
<CustomField>
    <fullName>LeadConverted__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lead Convertido</label>
    <type>Checkbox</type>
</CustomField>