org/force-app/main/default/objects/Lead/fields/LegalEntityType__c.field-meta.xml
<CustomField>
    <fullName>LegalEntityType__c</fullName>
    <label>Natureza jurídica</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sociedade Limitada</fullName>
            </value>
            <value>
                <fullName>LTDA</fullName>
            </value>
            <value>
                <fullName>Simples</fullName>
            </value>
            <value>
                <fullName>MEI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>