org/force-app/main/default/objects/Lead/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <formula>TEXT(Longitude)</formula>
    <label>Longitude</label>
    <type>Text</type>
</CustomField>