org/force-app/main/default/objects/Lead/fields/LossReason__c.field-meta.xml
<CustomField>
    <fullName>LossReason__c</fullName>
    <label>Detalhes da Perda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>