org/force-app/main/default/objects/Lead/fields/LossType__c.field-meta.xml
<CustomField>
    <fullName>LossType__c</fullName>
    <label>Motivo da Perda</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desistencia cliente</fullName>
            </value>
            <value>
                <fullName>Falta de interesse</fullName>
            </value>
            <value>
                <fullName>Concorrência</fullName>
            </value>
            <value>
                <fullName>Fora de cobertura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>