org/force-app/main/default/objects/Lead/fields/MainEmail__c.field-meta.xml
<CustomField>
    <fullName>MainEmail__c</fullName>
    <formula>Email</formula>
    <label>Email Principal</label>
    <type>Text</type>
</CustomField>