org/force-app/main/default/objects/Lead/fields/ProductInterest__c.field-meta.xml
<CustomField>
    <fullName>ProductInterest__c</fullName>
    <label>Produto de interesse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fiber</fullName>
                <label>Fibra</label>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>MobilePlan</fullName>
                <label>Telefonia móvel</label>
            </value>
            <value>
                <fullName>SecurityCameras</fullName>
                <label>Câmeras de segurança</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Outros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>