org/force-app/main/default/objects/Lead/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <description>Used to determine the Account RecordType during Lead conversion.</description>
    <formula>IF(RecordType.DeveloperName == &apos;B2B&apos;, &apos;LegalEntity_B2B&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DO NOT ADD THIS TO THE PAGE LAYOUT.</inlineHelpText>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>