org/force-app/main/default/objects/Lead/fields/RegistrationStatus__c.field-meta.xml
<CustomField>
    <fullName>RegistrationStatus__c</fullName>
    <label>Situação cadastral</label>
    <length>100</length>
    <type>Text</type>
</CustomField>