org/force-app/main/default/objects/Lead/fields/SDR__c.field-meta.xml
<CustomField>
    <fullName>SDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>