org/force-app/main/default/objects/Lead/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporativo</fullName>
                <label>B2B - Corporativo</label>
            </value>
            <value>
                <fullName>Governo</fullName>
                <label>B2G - Governo</label>
            </value>
            <value>
                <fullName>Varejo</fullName>
                <label>B2C - Varejo</label>
            </value>
            <value>
                <fullName>B2W - Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>