org/force-app/main/default/objects/Lead/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <inlineHelpText>Porcentagem de temperatura</inlineHelpText>
    <label>Temperatura do lead</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0% - Sem interesse / desqualificado</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10% - Lead cadastrado</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30% - Lead em desenvolvimento</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60% - Interesse real / oportunidade</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>90% - Oportunidade quente</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>100% - Convertido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>