org/force-app/main/default/objects/Lead/fields/vlocity_cmt__ProductInterest__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ProductInterest__c</fullName>
    <description>Picklist outlining the category of this lead&apos;s primary product interest. Customize as desired.</description>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fibra</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>TelefoniaMovel</fullName>
                <label>Telefonia móvel</label>
            </value>
            <value>
                <fullName>CamerasSeguranca</fullName>
                <label>Câmeras de segurança</label>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>