org/force-app/main/default/objects/Lead/recordTypes/B2C.recordType-meta.xml
<RecordType>
    <fullName>B2C</fullName>
    <active>true</active>
    <businessProcess>B2C</businessProcess>
    <label>B2C</label>
</RecordType>