org/force-app/main/default/objects/Lead/validationRules/BloqueiaConversaoSemCPFCNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueiaConversaoSemCPFCNPJ</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				ISBLANK(DocumentNumber__c),
				NOT(ISNEW()),
    IsConverted 				
)</errorConditionFormula>
    <errorMessage>Atenção: Antes de converter um Lead é necessário preencher o campo &apos;CPF/CNPJ&apos;.</errorMessage>
</ValidationRule>