org/force-app/main/default/objects/Lead/validationRules/BloqueiaEdicaoLeadPerdido.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueiaEdicaoLeadPerdido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        NOT(ISNEW()),
								ISCHANGED(Status),
        ISPICKVAL(PRIORVALUE(Status), &apos;Unqualified&apos;)
    )</errorConditionFormula>
    <errorMessage>Atenção: Esse lead já está perdido, não é possível converte-lo. Necessário criar um novo!</errorMessage>
</ValidationRule>