org/force-app/main/default/objects/Lead/validationRules/BloqueiaSelecaoManualLeadGanho.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueiaSelecaoManualLeadGanho</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status),
				OR(
								AND(
												ISPICKVAL(Status, &apos;Qualified&apos;),
            NOT(IsConverted)
								),
								AND(
								 			ISPICKVAL(PRIORVALUE(Status), &apos;Qualified&apos;),
												IsConverted
								) 
				)     
)</errorConditionFormula>
    <errorMessage>Atenção: apenas é possível converter o lead através do botão &quot;Converter&quot;.</errorMessage>
</ValidationRule>