org/force-app/main/default/objects/Lead/validationRules/BloqueiaSelecaoManualLeadPerdido.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueiaSelecaoManualLeadPerdido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				    ISCHANGED(Status),
				    ISPICKVAL(Status, &apos;Unqualified&apos;),
				    ISBLANK(TEXT(LossType__c))
)</errorConditionFormula>
    <errorMessage>Atenção: apenas é possível perder o lead através do botão &quot;Perder Lead&apos;.</errorMessage>
</ValidationRule>