org/force-app/main/default/objects/Lead/validationRules/DocumentValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>DocumentValidation</fullName>
    <active>false</active>
    <description>Regra para validar o preenchimento e formato do CPF ou CNPJ</description>
    <errorConditionFormula>NOT(
OR(
/* CPF com máscara OU sem máscara */
REGEX(DocumentNumber__c, &quot;^[0-9]{3}\\.[0-9]{3}\\.[0-9]{3}-[0-9]{2}$&quot;),
REGEX(DocumentNumber__c, &quot;^[0-9]{11}$&quot;),

/* CNPJ com máscara OU sem máscara */
REGEX(DocumentNumber__c, &quot;^[0-9]{2}\\.[0-9]{3}\\.[0-9]{3}/[0-9]{4}-[0-9]{2}$&quot;),
REGEX(DocumentNumber__c, &quot;^[0-9]{14}$&quot;)
)
)</errorConditionFormula>
    <errorMessage>O campo &quot;Número do Documento&quot; deve estar no formato:
-CPF: 999.999.999-99 ou sem os caracteres especiais;
-CNPJ: 99.999.999/9999-99 ou sem os caracteres especiais.</errorMessage>
</ValidationRule>