org/force-app/main/default/objects/Lead/validationRules/ManuallyLeadCreationStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>ManuallyLeadCreationStatus</fullName>
    <active>false</active>
    <description>Regra criada para impossibilitar a criação do Lead fora do status &apos;Novo&apos;</description>
    <errorConditionFormula>ISNEW() &amp;&amp;
NOT(ISPICKVAL(Status, &quot;Novo&quot;))</errorConditionFormula>
    <errorMessage>O lead deve ser criado com o status “Novo”</errorMessage>
</ValidationRule>