org/force-app/main/default/objects/Lead/validationRules/ValidaCamposObrigatorios.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaCamposObrigatorios</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				OR(
				    ISBLANK(Street),
				    ISBLANK(City),
				    ISBLANK(State),
				    ISBLANK(PostalCode),
				    ISBLANK(Country)
				),
				ISCHANGED(IsConverted),
				IsConverted
)</errorConditionFormula>
    <errorMessage>Atenção: é necessário preencher todos os campos da seção &apos;Informações de endereço&apos; antes de converter um lead</errorMessage>
</ValidationRule>