org/force-app/main/default/objects/Lead/validationRules/ValidaCPFeCNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaCPFeCNPJ</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
				RecordType__c = &quot;LegalEntity_B2B&quot;,
				/*Valida o formato correto do CPF*/ OR(NOT(AND( LEN(DocumentNumber__c) = 14, MID(DocumentNumber__c, 4, 1) = &quot;.&quot;, MID(DocumentNumber__c, 8, 1) = &quot;.&quot;, MID(DocumentNumber__c, 12, 1) = &quot;-&quot;)) ,/*Valida os digitos verificadores do CPF*/ NOT(OR( LEN(DocumentNumber__c)=0,AND(MOD(MOD(11-MOD( VALUE(MID(DocumentNumber__c,1,1))*10+ VALUE(MID(DocumentNumber__c,2,1))*9+ VALUE(MID(DocumentNumber__c,3,1))*8+ VALUE(MID(DocumentNumber__c,5,1))*7+ VALUE(MID(DocumentNumber__c,6,1))*6+ VALUE(MID(DocumentNumber__c,7,1))*5+ VALUE(MID(DocumentNumber__c,9,1))*4+ VALUE(MID(DocumentNumber__c,10,1))*3+ VALUE(MID(DocumentNumber__c,11,1))*2,11),11),10)= VALUE(MID(DocumentNumber__c,13,1)),MOD(MOD(11-MOD( VALUE(MID(DocumentNumber__c,1,1))*11+ VALUE(MID(DocumentNumber__c,2,1))*10+ VALUE(MID(DocumentNumber__c,3,1))*9+ VALUE(MID(DocumentNumber__c,5,1))*8+ VALUE(MID(DocumentNumber__c,6,1))*7+ VALUE(MID(DocumentNumber__c,7,1))*6+ VALUE(MID(DocumentNumber__c,9,1))*5+ VALUE(MID(DocumentNumber__c,10,1))*4+ VALUE(MID(DocumentNumber__c,11,1))*3+ VALUE(MID(DocumentNumber__c,13,1))*2,11),11),10)= VALUE(MID(DocumentNumber__c,14,1)))))) , /*Valida o formato correto do CNPJ*/ OR(NOT(AND( LEN(DocumentNumber__c) = 18, MID(DocumentNumber__c, 3, 1) = &quot;.&quot;, MID(DocumentNumber__c, 7, 1) = &quot;.&quot;, MID(DocumentNumber__c, 11, 1) = &quot;/&quot;, MID(DocumentNumber__c, 16, 1) = &quot;-&quot;)) ,/*Valida os digitos verificadores do CNPJ*/ IF(LEN(DocumentNumber__c)=18,OR(AND(MOD(( (VALUE(MID(DocumentNumber__c,1,1))*6)+ (VALUE(MID(DocumentNumber__c,2,1))*5)+ (VALUE(MID(DocumentNumber__c,4,1))*4)+ (VALUE(MID(DocumentNumber__c,5,1))*3)+ (VALUE(MID(DocumentNumber__c,6,1))*2)+ (VALUE(MID(DocumentNumber__c,8,1))*9)+ (VALUE(MID(DocumentNumber__c,9,1))*8)+ (VALUE(MID(DocumentNumber__c,10,1))*7)+ (VALUE(MID(DocumentNumber__c,12,1))*6)+ (VALUE(MID(DocumentNumber__c,13,1))*5)+ (VALUE(MID(DocumentNumber__c,14,1))*4)+ (VALUE(MID(DocumentNumber__c,15,1))*3)+ (VALUE(MID(DocumentNumber__c,17,1))*2)) ,11)&lt;=1 ,VALUE(MID(DocumentNumber__c,18,1))!=0) ,AND(MOD(( (VALUE(MID(DocumentNumber__c,1,1))*6)+ (VALUE(MID(DocumentNumber__c,2,1))*5)+ (VALUE(MID(DocumentNumber__c,4,1))*4)+ (VALUE(MID(DocumentNumber__c,5,1))*3)+ (VALUE(MID(DocumentNumber__c,6,1))*2)+ (VALUE(MID(DocumentNumber__c,8,1))*9)+ (VALUE(MID(DocumentNumber__c,9,1))*8)+ (VALUE(MID(DocumentNumber__c,10,1))*7)+ (VALUE(MID(DocumentNumber__c,12,1))*6)+ (VALUE(MID(DocumentNumber__c,13,1))*5)+ (VALUE(MID(DocumentNumber__c,14,1))*4)+ (VALUE(MID(DocumentNumber__c,15,1))*3)+ (VALUE(MID(DocumentNumber__c,17,1))*2)) ,11)&gt;1 ,(11-MOD(( (VALUE(MID(DocumentNumber__c,1,1))*6)+ (VALUE(MID(DocumentNumber__c,2,1))*5)+ (VALUE(MID(DocumentNumber__c,4,1))*4)+ (VALUE(MID(DocumentNumber__c,5,1))*3)+ (VALUE(MID(DocumentNumber__c,6,1))*2)+ (VALUE(MID(DocumentNumber__c,8,1))*9)+ (VALUE(MID(DocumentNumber__c,9,1))*8)+ (VALUE(MID(DocumentNumber__c,10,1))*7)+ (VALUE(MID(DocumentNumber__c,12,1))*6)+ (VALUE(MID(DocumentNumber__c,13,1))*5)+ (VALUE(MID(DocumentNumber__c,14,1))*4)+ (VALUE(MID(DocumentNumber__c,15,1))*3)+ (VALUE(MID(DocumentNumber__c,17,1))*2) ),11 ))!=VALUE(MID(DocumentNumber__c,18,1)))),false)), NOT($Profile.Name = &apos;System Administrator&apos;), NOT(ISBLANK(DocumentNumber__c)) )</errorConditionFormula>
    <errorMessage>Atenção, o CNPJ/CPF informado é incorreto. Informar um valor válido e formato correto. Ex:
CPF: XXX.XXX.XXX-XX
CNPJ: XX.XXX.XXX/XXXX-XX</errorMessage>
</ValidationRule>