org/force-app/main/default/objects/Lead/validationRules/ValidaPreenchimentoCluster.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaPreenchimentoCluster</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				RecordType__c = &quot;LegalEntity_B2B&quot;,
    ISPICKVAL($User.Cluster__c, &quot;&quot;),
    OR(
        ISPICKVAL(ClusterManual__c, &quot;&quot;),
        ISBLANK(TEXT(ClusterManual__c))
    )
)</errorConditionFormula>
    <errorDisplayField>ClusterManual__c</errorDisplayField>
    <errorMessage>Atenção: seu usuário não está definido a um cluster. Necessário preenchimento do campo para seguir.</errorMessage>
</ValidationRule>