org/force-app/main/default/objects/Lead/validationRules/VRAddressFields.validationRule-meta.xml
<ValidationRule>
    <fullName>VRAddressFields</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  NOT(
    AND(
      ISBLANK(Street),
      ISBLANK(City),
      ISBLANK(PostalCode),
      ISBLANK(Neighborhood__c),
      ISBLANK(AddressNumber__c),
      AND(ISBLANK(Country), ISPICKVAL(CountryCode, &apos;&apos;)),
      AND(ISBLANK(State), ISPICKVAL(StateCode, &apos;&apos;))
    )
  ),
  OR(
    ISBLANK(Street),
    ISBLANK(City),
    ISBLANK(PostalCode),
    ISBLANK(Neighborhood__c),
    ISBLANK(AddressNumber__c),
    AND(ISBLANK(Country), ISPICKVAL(CountryCode, &apos;&apos;)),
    AND(ISBLANK(State), ISPICKVAL(StateCode, &apos;&apos;))
  )
)</errorConditionFormula>
    <errorMessage>Para continuar, complete todos os campos do endereço ou deixe-os vazios.</errorMessage>
</ValidationRule>