org/force-app/main/default/objects/Lead/validationRules/VRPhoneMask.validationRule-meta.xml
<ValidationRule>
    <fullName>VRPhoneMask</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 		RecordType__c = &quot;LegalEntity_B2B&quot;,
   NOT(ISBLANK(Phone)),
   NOT(REGEX(Phone, &quot;^[1-9]{2}[0-9]{8}$&quot;)),
			NOT(REGEX(Phone, &quot;^0800[0-9]{7}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Atenção, o Telefone informado é incorreto. Informar um valor válido e formato correto. Ex:
1144223366 ou 08001239999</errorMessage>
</ValidationRule>